REGRESSION (r162947): css3/flexbox/multiline-justify-content.html and css3/flexbox/position-absolute-child.html are timing out https://bugs.webkit.org/show_bug.cgi?id=127809

Reviewed by Anders Carlsson.

Source/WebCore:

These tests generate very large number of small repaint rectangles that overwhelm the region code.

* page/FrameView.cpp:
(WebCore::FrameView::repaintContentRectangle):
* platform/graphics/Region.h:
(WebCore::Region::gridSize):
(WebCore::Region::Shape::gridSize):

    Add accessor for getting the current region grid complexity.

* rendering/RenderView.cpp:
(WebCore::RenderView::repaintViewRectangle):

    If the region gets very complex merge the repaint rects into a single big rectangle.

LayoutTests:

* platform/mac/TestExpectations:



Canonical link: https://commits.webkit.org/145847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163019 268f45cc-cd09-0410-ab3c-d52691b4dbfc